crates/shell/src/parser/program/tests/snapshots/omp_shell_engine__parser__program__tests__redirections__parse_redirect_append.snap
---
source: brush-parser/src/parser/tests/redirections.rs
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "echo hello >> file.txt",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "echo",
                  loc: "[location]",
                )),
                suffix: Some(CommandSuffix([
                  Word(Word(
                    value: "hello",
                    loc: "[location]",
                  )),
                  IoRedirect(File(None, Append, Filename(Word(
                    value: "file.txt",
                    loc: "[location]",
                  )))),
                ])),
              )),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
